--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,8 @@ jobs:
           git fetch --tags --force
           CURRENT='${{ github.ref_name }}'
           LATEST=$(git tag | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+' | tail -1)
-          if [[ $CURRENT -lt $LATEST ]]; then
-            echo "ERROR: current manifest version $CURRENT is lower than latest version $LATEST"
+          if [[ "$CURRENT" < "$LATEST" ]]; then
+            echo "ERROR: current version $CURRENT is lower than latest version $LATEST"
             exit 1
           fi
           echo "Version $CURRENT is valid, continuing to build"
