--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           fetch-depth: 0
       - run: |
+          echo ${{ github.ref_name }}
+          echo $GITHUB_REF_NAME
+
           git fetch --tags --force
           CURRENT='${{ github.ref_name }}'
           LATEST=$(git tag | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+' | tail -1)
@@ -22,7 +25,7 @@ jobs:
             echo "ERROR: current version $CURRENT is lower than latest version $LATEST"
             exit 1
           fi
-          echo "Version $CURRENT is greater or equal to latest $LATEST, continuing to build"
+          echo "Version $CURRENT >= $LATEST, continuing to build"
 
 
   zip_build:
